// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popular Scoring Integration Tests - Real TMDB Data > should apply genre filtering to popular results > popular-action-genre-filter 1`] = `
[
  {
    "genres": [
      "Action",
      "Thriller",
      "Music",
      "Horror",
    ],
    "name": "Pretty Lethal",
    "type": "movie",
  },
  {
    "genres": [
      "Thriller",
      "Action",
      "Drama",
    ],
    "name": "Humint",
    "type": "movie",
  },
  {
    "genres": [
      "Action",
      "Crime",
      "Thriller",
    ],
    "name": "Shelter",
    "type": "movie",
  },
  {
    "genres": [
      "Action",
      "Comedy",
      "Horror",
    ],
    "name": "They Will Kill You",
    "type": "movie",
  },
  {
    "genres": [
      "Action",
      "Science Fiction",
      "Thriller",
    ],
    "name": "War Machine",
    "type": "movie",
  },
  {
    "genres": [
      "Science Fiction",
      "Action",
      "Thriller",
    ],
    "name": "Mercy",
    "type": "movie",
  },
  {
    "genres": [
      "Animation",
      "Action",
      "Fantasy",
    ],
    "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
    "type": "movie",
  },
  {
    "genres": [
      "Animation",
      "Action",
      "Fantasy",
    ],
    "name": "JUJUTSU KAISEN",
    "type": "tv",
  },
  {
    "genres": [
      "Crime",
      "Drama",
      "Action",
    ],
    "name": "NCIS",
    "type": "tv",
  },
  {
    "genres": [
      "Fantasy",
      "Action",
      "Drama",
    ],
    "name": "Smallville",
    "type": "tv",
  },
  {
    "genres": [
      "Action",
      "Drama",
      "Fantasy",
    ],
    "name": "Doctor Who",
    "type": "tv",
  },
]
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should compute stats from real fixtures (use to update TMDB_STAT_DEFAULTS) > tmdb-stat-defaults 1`] = `
{
  "maxAvgRating": 8,
  "maxPopularity": 1319,
  "maxVoteCount": 10935,
  "minPopularity": 3,
  "minVoteCount": 0,
  "movieStats": {
    "maxAvgRating": 6.7935185185185185,
    "maxPopularity": 1318.7141,
    "maxVoteCount": 10402,
    "minPopularity": 3.1389,
    "minVoteCount": 0,
  },
  "tvStats": {
    "maxAvgRating": 7.723699999999999,
    "maxPopularity": 375.816,
    "maxVoteCount": 10935,
    "minPopularity": 157.4127,
    "minVoteCount": 205,
  },
}
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should mix movies and TV shows in popular results > popular-type-distribution 1`] = `
{
  "items": [
    {
      "name": "Your Heart Will Be Broken",
      "tmdbId": 1523145,
      "type": "movie",
    },
    {
      "name": "Project Hail Mary",
      "tmdbId": 687163,
      "type": "movie",
    },
    {
      "name": "The Super Mario Galaxy Movie",
      "tmdbId": 1226863,
      "type": "movie",
    },
    {
      "name": "Mike & Nick & Nick & Alice",
      "tmdbId": 1115544,
      "type": "movie",
    },
    {
      "name": "Crime 101",
      "tmdbId": 1171145,
      "type": "movie",
    },
    {
      "name": "GOAT",
      "tmdbId": 1297842,
      "type": "movie",
    },
    {
      "name": "Avatar: Fire and Ash",
      "tmdbId": 83533,
      "type": "movie",
    },
    {
      "name": "Hoppers",
      "tmdbId": 1327819,
      "type": "movie",
    },
    {
      "name": "Pretty Lethal",
      "tmdbId": 1084187,
      "type": "movie",
    },
    {
      "name": "Humint",
      "tmdbId": 1268127,
      "type": "movie",
    },
    {
      "name": "Shelter",
      "tmdbId": 1290821,
      "type": "movie",
    },
    {
      "name": "Scream 7",
      "tmdbId": 1159559,
      "type": "movie",
    },
    {
      "name": "Send Help",
      "tmdbId": 1198994,
      "type": "movie",
    },
    {
      "name": "The Drama",
      "tmdbId": 1325734,
      "type": "movie",
    },
    {
      "name": ""Wuthering Heights"",
      "tmdbId": 1316092,
      "type": "movie",
    },
    {
      "name": "Ready or Not: Here I Come",
      "tmdbId": 1266127,
      "type": "movie",
    },
    {
      "name": "How to Make a Killing",
      "tmdbId": 467905,
      "type": "movie",
    },
    {
      "name": "They Will Kill You",
      "tmdbId": 1292695,
      "type": "movie",
    },
    {
      "name": "Zootopia 2",
      "tmdbId": 1084242,
      "type": "movie",
    },
    {
      "name": "Pizza Movie",
      "tmdbId": 1493859,
      "type": "movie",
    },
  ],
  "movies": 20,
  "total": 20,
  "tvShows": 0,
}
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should score and sort popular media consistently - no user > popular-scoring-no-user 1`] = `
[
  {
    "baseScore": 0.89,
    "baseTrendingScore": 0.9,
    "finalScore": 0.89,
    "finalTrendingScore": 0.9,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Your Heart Will Be Broken",
    "tmdbId": 1523145,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.79,
    "baseTrendingScore": 0.85,
    "finalScore": 0.79,
    "finalTrendingScore": 0.85,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Project Hail Mary",
    "tmdbId": 687163,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.77,
    "baseTrendingScore": 0.85,
    "finalScore": 0.77,
    "finalTrendingScore": 0.85,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "The Super Mario Galaxy Movie",
    "tmdbId": 1226863,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.79,
    "baseTrendingScore": 0.85,
    "finalScore": 0.79,
    "finalTrendingScore": 0.85,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Mike & Nick & Nick & Alice",
    "tmdbId": 1115544,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.78,
    "baseTrendingScore": 0.84,
    "finalScore": 0.78,
    "finalTrendingScore": 0.84,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Crime 101",
    "tmdbId": 1171145,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.79,
    "baseTrendingScore": 0.83,
    "finalScore": 0.79,
    "finalTrendingScore": 0.83,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "GOAT",
    "tmdbId": 1297842,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.8,
    "baseTrendingScore": 0.83,
    "finalScore": 0.8,
    "finalTrendingScore": 0.83,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Avatar: Fire and Ash",
    "tmdbId": 83533,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.78,
    "baseTrendingScore": 0.83,
    "finalScore": 0.78,
    "finalTrendingScore": 0.83,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Hoppers",
    "tmdbId": 1327819,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.77,
    "baseTrendingScore": 0.82,
    "finalScore": 0.77,
    "finalTrendingScore": 0.82,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Pretty Lethal",
    "tmdbId": 1084187,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.75,
    "baseTrendingScore": 0.8,
    "finalScore": 0.75,
    "finalTrendingScore": 0.8,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Humint",
    "tmdbId": 1268127,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.76,
    "baseTrendingScore": 0.8,
    "finalScore": 0.76,
    "finalTrendingScore": 0.8,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Shelter",
    "tmdbId": 1290821,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.71,
    "baseTrendingScore": 0.79,
    "finalScore": 0.71,
    "finalTrendingScore": 0.79,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Scream 7",
    "tmdbId": 1159559,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.72,
    "baseTrendingScore": 0.77,
    "finalScore": 0.72,
    "finalTrendingScore": 0.77,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Send Help",
    "tmdbId": 1198994,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.65,
    "baseTrendingScore": 0.77,
    "finalScore": 0.65,
    "finalTrendingScore": 0.77,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "The Drama",
    "tmdbId": 1325734,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.69,
    "baseTrendingScore": 0.77,
    "finalScore": 0.69,
    "finalTrendingScore": 0.77,
    "genreScore": 0,
    "keywordScore": 0,
    "name": ""Wuthering Heights"",
    "tmdbId": 1316092,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.67,
    "baseTrendingScore": 0.76,
    "finalScore": 0.67,
    "finalTrendingScore": 0.76,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Ready or Not: Here I Come",
    "tmdbId": 1266127,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.68,
    "baseTrendingScore": 0.75,
    "finalScore": 0.68,
    "finalTrendingScore": 0.75,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "How to Make a Killing",
    "tmdbId": 467905,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.65,
    "baseTrendingScore": 0.75,
    "finalScore": 0.65,
    "finalTrendingScore": 0.75,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "They Will Kill You",
    "tmdbId": 1292695,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.72,
    "baseTrendingScore": 0.74,
    "finalScore": 0.72,
    "finalTrendingScore": 0.74,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Zootopia 2",
    "tmdbId": 1084242,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.5,
    "baseTrendingScore": 0.65,
    "finalScore": 0.5,
    "finalTrendingScore": 0.65,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Pizza Movie",
    "tmdbId": 1493859,
    "type": "movie",
    "userScore": 0,
  },
]
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should score and sort popular media with user preferences > popular-scoring-with-user-preferences 1`] = `
[
  {
    "baseScore": 0.77,
    "finalScore": 0.83,
    "finalTrendingScore": 0.87,
    "genreScore": 0.97,
    "keywordScore": 0.97,
    "name": "Pretty Lethal",
    "tmdbId": 1084187,
    "type": "movie",
    "userScore": 0.97,
  },
  {
    "baseScore": 0.75,
    "finalScore": 0.83,
    "finalTrendingScore": 0.86,
    "genreScore": 0.99,
    "keywordScore": 0.99,
    "name": "Humint",
    "tmdbId": 1268127,
    "type": "movie",
    "userScore": 0.99,
  },
  {
    "baseScore": 0.76,
    "finalScore": 0.83,
    "finalTrendingScore": 0.85,
    "genreScore": 0.97,
    "keywordScore": 0.97,
    "name": "Shelter",
    "tmdbId": 1290821,
    "type": "movie",
    "userScore": 0.97,
  },
  {
    "baseScore": 0.89,
    "finalScore": 0.84,
    "finalTrendingScore": 0.84,
    "genreScore": 0.7,
    "keywordScore": 0.7,
    "name": "Your Heart Will Be Broken",
    "tmdbId": 1523145,
    "type": "movie",
    "userScore": 0.7,
  },
  {
    "baseScore": 0.78,
    "finalScore": 0.78,
    "finalTrendingScore": 0.81,
    "genreScore": 0.76,
    "keywordScore": 0.76,
    "name": "Crime 101",
    "tmdbId": 1171145,
    "type": "movie",
    "userScore": 0.76,
  },
  {
    "baseScore": 0.69,
    "finalScore": 0.69,
    "finalTrendingScore": 0.75,
    "genreScore": 0.7,
    "keywordScore": 0.7,
    "name": ""Wuthering Heights"",
    "tmdbId": 1316092,
    "type": "movie",
    "userScore": 0.7,
  },
  {
    "baseScore": 0.73,
    "finalScore": 0.81,
    "finalTrendingScore": 0.72,
    "genreScore": 0.97,
    "keywordScore": 0.97,
    "name": "War Machine",
    "tmdbId": 1265609,
    "type": "movie",
    "userScore": 0.97,
  },
  {
    "baseScore": 0.67,
    "finalScore": 0.76,
    "finalTrendingScore": 0.69,
    "genreScore": 0.97,
    "keywordScore": 0.97,
    "name": "Mercy",
    "tmdbId": 1236153,
    "type": "movie",
    "userScore": 0.97,
  },
  {
    "baseScore": 0.72,
    "finalScore": 0.71,
    "finalTrendingScore": 0.64,
    "genreScore": 0.7,
    "keywordScore": 0.7,
    "name": "Peaky Blinders: The Immortal Man",
    "tmdbId": 875828,
    "type": "movie",
    "userScore": 0.7,
  },
  {
    "baseScore": 0.72,
    "finalScore": 0.73,
    "finalTrendingScore": 0.64,
    "genreScore": 0.76,
    "keywordScore": 0.76,
    "name": "Greenland 2: Migration",
    "tmdbId": 840464,
    "type": "movie",
    "userScore": 0.76,
  },
  {
    "baseScore": 0.72,
    "finalScore": 0.74,
    "finalTrendingScore": 0.61,
    "genreScore": 0.81,
    "keywordScore": 0.81,
    "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
    "tmdbId": 1311031,
    "type": "movie",
    "userScore": 0.81,
  },
  {
    "baseScore": 0.79,
    "finalScore": 0.55,
    "finalTrendingScore": 0.6,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Project Hail Mary",
    "tmdbId": 687163,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.65,
    "finalScore": 0.53,
    "finalTrendingScore": 0.6,
    "genreScore": 0.25,
    "keywordScore": 0.25,
    "name": "They Will Kill You",
    "tmdbId": 1292695,
    "type": "movie",
    "userScore": 0.25,
  },
  {
    "baseScore": 0.72,
    "finalScore": 0.54,
    "finalTrendingScore": 0.58,
    "genreScore": 0.13,
    "keywordScore": 0.13,
    "name": "Send Help",
    "tmdbId": 1198994,
    "type": "movie",
    "userScore": 0.13,
  },
  {
    "baseScore": 0.8,
    "finalScore": 0.56,
    "finalTrendingScore": 0.58,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Avatar: Fire and Ash",
    "tmdbId": 83533,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.68,
    "finalScore": 0.52,
    "finalTrendingScore": 0.56,
    "genreScore": 0.13,
    "keywordScore": 0.13,
    "name": "How to Make a Killing",
    "tmdbId": 467905,
    "type": "movie",
    "userScore": 0.13,
  },
  {
    "baseScore": 0.83,
    "finalScore": 0.79,
    "finalTrendingScore": 0.56,
    "genreScore": 0.7,
    "keywordScore": 0.7,
    "name": "Supernatural",
    "tmdbId": 1622,
    "type": "tv",
    "userScore": 0.7,
  },
  {
    "baseScore": 0.71,
    "finalScore": 0.5,
    "finalTrendingScore": 0.56,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Scream 7",
    "tmdbId": 1159559,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.82,
    "finalScore": 0.79,
    "finalTrendingScore": 0.56,
    "genreScore": 0.7,
    "keywordScore": 0.7,
    "name": "Grey's Anatomy",
    "tmdbId": 1416,
    "type": "tv",
    "userScore": 0.7,
  },
  {
    "baseScore": 0.82,
    "finalScore": 0.78,
    "finalTrendingScore": 0.55,
    "genreScore": 0.7,
    "keywordScore": 0.7,
    "name": "House",
    "tmdbId": 1408,
    "type": "tv",
    "userScore": 0.7,
  },
]
`;
